# emay-sleepo2

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  REVERSE_ENGINEERING.md  SPEC.md  live_demo.py  spec.md
.claude/commands/: respond-to-copilot.md
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml
c/: Makefile
c/src/: emay_sleepo2.c  emay_sleepo2.h  emay_sleepo2_ble.c
c/tests/: test_main.c
cpp/src/: emay_sleepo2.cpp  emay_sleepo2.hpp
csharp/src/: EMAYBLEClient.cs  EMAYProtocol.cs  EMAYSleepO2.csproj  EMAYTypes.cs
docs/superpowers/specs/: 2026-07-15-connection-failure-reason-design.md
fixtures/: sample-export.csv
go/: README.md  csv.go  csv_test.go  downsampler.go  downsampler_test.go  emay.go  go.mod  protocol.go  protocol_test.go
java/: pom.xml
java/src/main/java/com/groundeffectsoftware/emaysleepo2/: EMAYBLEClient.java  EMAYProtocol.java
kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/src/main/java/com/anxietywatch/emaysleepo2/: EMAYCSVParser.kt  EMAYClient.kt  EMAYLiveDownsampler.kt  EMAYProtocol.kt  EMAYReading.kt
kotlin/src/main/java/com/groundeffectsoftware/com/emaysleepo2/: EMAYCSVParser.kt  EMAYClient.kt  EMAYLiveDownsampler.kt  EMAYProtocol.kt  EMAYReading.kt
kotlin/src/main/java/com/groundeffectsoftware/emaysleepo2/: EMAYCSVParser.kt  EMAYClient.kt  EMAYLiveDownsampler.kt  EMAYProtocol.kt  EMAYReading.kt
kotlin/src/test/java/com/anxietywatch/emaysleepo2/: EMAYProtocolTest.kt
kotlin/src/test/java/com/groundeffectsoftware/com/emaysleepo2/: EMAYProtocolTest.kt
kotlin/src/test/java/com/groundeffectsoftware/emaysleepo2/: EMAYProtocolTest.kt
node/: README.md  package-lock.json  package.json
node/src/: client.ts  csv-parser.ts  downsampler.ts  index.ts  protocol.ts  types.ts
node/tests/: csv.test.ts  downsampler.test.ts  protocol.test.ts
php/src/: EMAYBLEClient.php
python/: README.md  pyproject.toml
python/src/emay_sleepo2/: __init__.py  client.py  csv_parser.py  downsampler.py  protocol.py  types.py
python/tests/: test_client.py  test_csv.py  test_downsampler.py  test_protocol.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  csv.rs  downsampler.rs  lib.rs  protocol.rs  types.rs
scala/: build.sbt
scala/src/main/scala/com/groundeffectsoftware/emaysleepo2/: EMAYBLEClient.scala
swift/: Package.swift  README.md
swift/Sources/EMAYSleepO2/: EMAYClient.swift  EMAYLiveDownsampler.swift  EMAYProtocol.swift
swift/Sources/EMAYSleepO2CSV/: EMAYCSVParser.swift
swift/Tests/EMAYSleepO2CSVTests/: EMAYCSVParserTests.swift
swift/Tests/EMAYSleepO2Tests/: EMAYLiveDownsamplerTests.swift  EMAYProtocolTests.swift
