[package]
name = "emay-sleepo2"
version = "1.0.0"
edition = "2024"
description = "BLE client and CSV parser for the EMAY SleepO2 pulse oximeter"
readme = "README.md"
license = "MIT"
repository = "https://github.com/chenders/emay-sleepo2"
keywords = ["emay", "sleepo2", "pulse-oximeter", "spo2", "ble"]
categories = ["hardware-support", "science", "api-bindings"]

[dependencies]
btleplug = { version = "0.11", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
uuid = { version = "1", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
ble = ["btleplug", "tokio", "uuid", "futures"]
csv = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
